welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:2: error: ')' expected but 'return' found.
	if (Math.abs(a-b)>= 10||Math.abs(a-c)>= 10||Math.abs(b-c)>= 10 return true
                                                                       ^lessBy10:3: error: ';' expected but 'false' found.
	false
        ^